[package]
name = "rpscan"
version = "0.1.0"
authors = ["r0p3_laptop <ropefalora@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
serde_json = "1.0"
num_cpus = "1.13.0"
itertools = "0.10.0"
threadpool = "1.8.1"
